STABLE: Synchronizing trunk with [5907].         Full change logs [http://www.l2jserver.com/forum/viewtopic.php?f=80&t=25685#p161660 here] and [http://www.l2jserver.com/forum/viewtopic.php?f=80&t=25685#p161661 here].
'''Note 1:''' We are aware that synchronization took too much, we will try to keep updates often.
'''Note 2:''' We are aware that skill/effects/targets/formulas rework is not finished, do not worry all fixes will be synchronized as soon as they get tested!