@@ -1,29 +1,36 @@
 @echo off
 title Game Server Console
+
 :start
 echo Starting L2J Game Server.
 echo.
-REM -------------------------------------
-REM Default parameters for a basic server.
+
 java -Djava.util.logging.manager=com.l2jserver.util.L2LogManager -Xms1024m -Xmx1024m -cp ./../libs/*;l2jserver.jar com.l2jserver.gameserver.GameServer
-REM
-REM If you have a big server and lots of memory, you could experiment for example with
-REM java -server -Xmx1536m -Xms1024m -Xmn512m -XX:PermSize=256m -XX:SurvivorRatio=8 -Xnoclassgc -XX:+AggressiveOpts
-REM -------------------------------------
+
+REM NOTE: If you have a powerful machine, you could modify/add some extra parameters for performance, like:
+REM -Xms1536m
+REM -Xmx3072m
+REM -XX:+AggressiveOpts
+REM Use this parameters carefully, some of them could cause abnormal behavior, deadlocks, etc.
+REM More info here: http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html
+
 if ERRORLEVEL 2 goto restart
 if ERRORLEVEL 1 goto error
 goto end
+
 :restart
 echo.
-echo Admin Restart ...
+echo Admin Restarted Game Server.
 echo.
 goto start
+
 :error
 echo.
-echo Server terminated abnormally
+echo Game Server Terminated Abnormally!
 echo.
+
 :end
 echo.
-echo server terminated
+echo Game Server Terminated.
 echo.
 pause
